# tvmaze-api

./: Cargo.toml
.fleet/: run.json
src/: cacher.rs  client.rs  episode.rs  lib.rs  season.rs  show.rs
src/json/: common.rs  episode.rs  mod.rs  search.rs  season.rs  show.rs
src/responses/: episode.rs  mod.rs  season.rs  show.rs
tvmaze-example/: Cargo.toml
tvmaze-example/src/: main.rs
