[package]
name = "tvmaze-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.13", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1.59"
parking_lot = "0.12.1"
chrono = {version = "0.4", features = ["serde"]}
isocountry = "0.3.2"

[dev-dependencies]
tokio = {version = "1.12", features = ["full"]}